--- a/sources/ALGLIB/ALGLIB.csproj
+++ b/sources/ALGLIB/ALGLIB.csproj
@@ -120,6 +120,9 @@
   <PropertyGroup>
     <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
 set ProjectDir=$(ProjectDir)
-set SolutionDir=$(SolutionDir)</PreBuildEvent>
+set SolutionDir=$(SolutionDir)
+set Outdir=$(Outdir)
+
+call PreBuildEvent.cmd</PreBuildEvent>
   </PropertyGroup>
 </Project>
