Copy license file to output directory. #783
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2435 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/ALGLIB/ALGLIB.csproj
+++ b/sources/ALGLIB/ALGLIB.csproj
@@ -97,7 +97,9 @@
     <Compile Include="svd.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ALGLIB License.txt" />
+    <Content Include="ALGLIB License.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
