Fixed #787 (LinearRegressionOperator uses leastsquares function of ALGLIB instead of linearregression function)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2445 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/ALGLIB/ALGLIB.csproj
+++ b/sources/ALGLIB/ALGLIB.csproj
@@ -87,8 +87,13 @@
     <Compile Include="AlglibPlugin.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="descriptivestatistics.cs" />
+    <Compile Include="gammaf.cs" />
+    <Compile Include="igammaf.cs" />
     <Compile Include="leastsquares.cs" />
+    <Compile Include="linreg.cs" />
     <Compile Include="lq.cs" />
+    <Compile Include="normaldistr.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="qr.cs" />
     <Compile Include="reflections.cs" />
