integrated branch MainForm refactoring into trunk (ticket #771)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2458 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -77,8 +77,12 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObservableList.cs" />
     <Compile Include="DoubleExtensions.cs">
       <SubType>Code</SubType>
     </Compile>
