Added AssemblyInfo.cs to project HeuristicLab.Common (#798)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2476 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -92,6 +92,7 @@
     <Compile Include="HeuristicLabCommonPlugin.cs" />
     <Compile Include="NotificationDictionary.cs" />
     <Compile Include="ObservableCollection.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
