Added !AssemblyInfo.cs and missing plugin files in plugin class to project !HeuristicLab.SQLServerCompact (ticket #798)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2477 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SQLServerCompact/3.2/HeuristicLab.SQLServerCompact-3.2.csproj
+++ b/sources/HeuristicLab.SQLServerCompact/3.2/HeuristicLab.SQLServerCompact-3.2.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabSQLServerCompactPlugin.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="System.Data.SqlServerCe.dll">
