--- a/sources/HeuristicLab.Modeling.Database.SQLServerCompact/3.2/HeuristicLab.Modeling.Database.SQLServerCompact-3.2.csproj
+++ b/sources/HeuristicLab.Modeling.Database.SQLServerCompact/3.2/HeuristicLab.Modeling.Database.SQLServerCompact-3.2.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ModelingDataContext.cs" />
     <Compile Include="DataObjects\ModelResult.cs" />
     <Compile Include="DataObjects\Problem.cs" />
+    <Compile Include="PredictorPersister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataObjects\Result.cs" />
     <Compile Include="DataObjects\Variable.cs" />
