added ability to generate separators in between menu- and toolbaritems (ticket #771)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2514 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.Test/3.2/HeuristicLab.MainForm.Test-3.2.csproj
+++ b/sources/HeuristicLab.MainForm.Test/3.2/HeuristicLab.MainForm.Test-3.2.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\NewEditorAction.cs" />
+    <Compile Include="ButtonItems\SeparatorToolStripButtonItem.cs" />
     <Compile Include="ButtonItems\NewEditorToolStripButtonItem.cs" />
     <Compile Include="ButtonItems\NewFormToolStripButtonItem.cs" />
     <Compile Include="ButtonItems\SaveToolStripButtonItem.cs" />
@@ -106,6 +107,7 @@
     <Compile Include="FormView.Designer.cs">
       <DependentUpon>FormView.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuItems\SeparatorMenuItem.cs" />
     <Compile Include="MenuItems\ExitToolStripMenuItem.cs" />
     <Compile Include="MenuItems\NewFormToolStripMenuItem.cs" />
     <Compile Include="MenuItems\NewEditorToolStripMenuItem.cs" />
