changed modeling database backend to use a shared read connection => notification by exception if another program is connected to the database (ticket #759)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2530 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab/app.config
+++ b/sources/HeuristicLab/app.config
@@ -9,6 +9,9 @@
   </connectionStrings>
   <system.serviceModel>
   </system.serviceModel>
+  <runtime>
+    <gcServer enabled="true"/>
+  </runtime>
   
   <system.data>
     <DbProviderFactories>
