added !ViewShown, !ViewHidden and !ViewClosed events in !MainForm (ticket #771)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2548 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
+++ b/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
@@ -80,6 +80,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ViewShownEventArgs.cs" />
+    <Compile Include="ViewEventArgs.cs" />
     <Compile Include="ToolBarSeparatorItemBase.cs" />
     <Compile Include="Interfaces\IToolBarSeparatorItem.cs" />
     <Compile Include="Interfaces\IMenuItem.cs" />
