--- a/sources/HeuristicLab.GP.Interfaces/3.3/HeuristicLab.GP.Interfaces-3.3.csproj
+++ b/sources/HeuristicLab.GP.Interfaces/3.3/HeuristicLab.GP.Interfaces-3.3.csproj
@@ -87,6 +87,7 @@
     <Compile Include="HeuristicLabGPInterfacesPlugin.cs" />
     <Compile Include="IFunction.cs" />
     <Compile Include="IFunctionTree.cs" />
+    <Compile Include="IGeneticProgrammingAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
