Worked on HeuristicLab.Collections plugin (#819)  * added ObservableKeyedCollectionBase  * minor fixes
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2573 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
+++ b/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObservableKeyedCollectionBase.cs" />
     <Compile Include="IndexedCollectionChangedEventsBase.cs" />
     <Compile Include="ObservableCollection.cs" />
     <Compile Include="IIndexedCollectionChangedEvents.cs" />
