Removed my name from the default settings in the plugin infrastructure. #799
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2597 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/Properties/Settings.settings
+++ b/sources/HeuristicLab.PluginInfrastructure/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="User" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Gabriel Kronberger</Value>
+      <Value Profile="(Default)">-</Value>
     </Setting>
     <Setting Name="Organization" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">HEAL</Value>
+      <Value Profile="(Default)">-</Value>
     </Setting>
     <Setting Name="UpdateLocations" Type="System.Collections.Specialized.StringCollection" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
