--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -8,10 +8,10 @@
     <applicationSettings>
         <HeuristicLab.PluginInfrastructure.Properties.Settings>
             <setting name="User" serializeAs="String">
-                <value>Gabriel Kronberger</value>
+                <value>-</value>
             </setting>
             <setting name="Organization" serializeAs="String">
-                <value>HEAL</value>
+                <value>-</value>
             </setting>
             <setting name="UpdateLocations" serializeAs="Xml">
                 <value>
