Fixed post-build scripts. #799
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2598 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SQLite/3.2/HeuristicLab.SQLite-3.2.csproj
+++ b/sources/HeuristicLab.SQLite/3.2/HeuristicLab.SQLite-3.2.csproj
@@ -88,7 +88,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
-    <None Include="SQLite.NET.chm" />
+    <None Include="SQLite.NET.chm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
@@ -97,7 +99,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SQLite License.txt" />
+    <Content Include="SQLite License.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="System.Data.SQLite.DLL" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
