--- a/sources/HeuristicLab.Tracing/3.2/HeuristicLab.Tracing-3.2.csproj
+++ b/sources/HeuristicLab.Tracing/3.2/HeuristicLab.Tracing-3.2.csproj
@@ -112,8 +112,12 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="HeuristicLab.Hive.log4net.xml" />
-    <Content Include="log4net licence.txt" />
+    <Content Include="HeuristicLab.Hive.log4net.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="log4net licence.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
