Re-added ICSharpZipLib and replaced main start up code with call to plugin infrastructure start up code. #799
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2600 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -169,6 +169,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ICSharpCode.SharpZipLib License.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ICSharpCode.SharpZipLib.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Details.gif" />
     <Content Include="Resources\HeuristicLab.ico" />
     <Content Include="Resources\LargeIcons.gif" />
