--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/3.2/app.config
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/3.2/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HeuristicLab.Hive.Server.ADODataAccess.Properties.Settings.HiveServerConnectionString"
-            connectionString="Data Source=10.20.71.10;Initial Catalog=HeuristicLab.Hive_DBTesting;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true"
+            connectionString="Data Source=127.0.0.1;Initial Catalog=HeuristicLab.Hive;Persist Security Info=True;User ID=hive;Password=hive;Pooling=true;MultipleActiveResultSets=true"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
