--- a/sources/HeuristicLab.GP.StructureIdentification.Networks/3.2/HeuristicLab.GP.StructureIdentification.Networks-3.2.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification.Networks/3.2/HeuristicLab.GP.StructureIdentification.Networks-3.2.csproj
@@ -1,17 +1,19 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6EDEE199-61FC-48E1-AEDA-AF1C2E722063}</ProjectGuid>
+    <ProjectGuid>{5DBC2F13-EC32-4DCA-9D5F-E60B5EA8459A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.GP.Tests</RootNamespace>
-    <AssemblyName>HeuristicLab.GP.Tests</AssemblyName>
+    <RootNamespace>HeuristicLab.GP.StructureIdentification.Networks</RootNamespace>
+    <AssemblyName>HeuristicLab.GP.StructureIdentification.Networks-3.2</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,105 +48,117 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NetworkFunctionLibraryTest.cs" />
-    <Compile Include="HL3TreeEvaluatorTest.cs" />
-    <Compile Include="NetworkToFunctionTransformerTest.cs" />
-    <Compile Include="ProbabilisticTreeCreatorTest.cs" />
+    <Compile Include="FunctionLibraryInjector.cs" />
+    <Compile Include="HeuristicLabGPStructureIdentificationNetworksPlugin.cs" />
+    <Compile Include="OffspringSelectionGPNetworkStructureIdentification.cs" />
+    <Compile Include="NetworkToFunctionTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SymbolicExpressionImporter.cs" />
-    <Compile Include="Token.cs" />
-    <Compile Include="Util.cs" />
+    <Compile Include="Symbols\AdditionF1.cs" />
+    <Compile Include="Symbols\BindF1.cs" />
+    <Compile Include="Symbols\BindF2.cs" />
+    <Compile Include="Symbols\Id.cs" />
+    <Compile Include="Symbols\OpenSqr.cs" />
+    <Compile Include="Symbols\OpenParameter.cs" />
+    <Compile Include="Symbols\Cycle.cs" />
+    <Compile Include="Symbols\DivisionF1.cs" />
+    <Compile Include="Symbols\MultiplicationF1.cs" />
+    <Compile Include="Symbols\OpenDivision.cs" />
+    <Compile Include="Symbols\OpenMultiplication.cs" />
+    <Compile Include="Symbols\OpenSubtraction.cs" />
+    <Compile Include="Symbols\OpenAddition.cs" />
+    <Compile Include="Symbols\Flip.cs" />
+    <Compile Include="Symbols\OpenSqrt.cs" />
+    <Compile Include="Symbols\OpenExp.cs" />
+    <Compile Include="Symbols\OpenLog.cs" />
+    <Compile Include="Symbols\SubtractionF1.cs" />
+    <Compile Include="Symbols\OpenParameterFunctionTree.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HeuristicLab.Common\3.2\HeuristicLab.Common-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Common\3.2\HeuristicLab.Common-3.2.csproj">
       <Project>{1FC004FC-59AF-4249-B1B6-FF25873A20E4}</Project>
       <Name>HeuristicLab.Common-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Core\3.2\HeuristicLab.Core-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Core\3.2\HeuristicLab.Core-3.2.csproj">
       <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
       <Name>HeuristicLab.Core-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.DataAnalysis\3.2\HeuristicLab.DataAnalysis-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.DataAnalysis\3.2\HeuristicLab.DataAnalysis-3.2.csproj">
       <Project>{7DD3A97A-56E9-462F-90E2-A351FE7AF5C2}</Project>
       <Name>HeuristicLab.DataAnalysis-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Data\3.2\HeuristicLab.Data-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Data\3.2\HeuristicLab.Data-3.2.csproj">
       <Project>{F473D9AF-3F09-4296-9F28-3C65118DAFFA}</Project>
       <Name>HeuristicLab.Data-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.Algorithms\3.2\HeuristicLab.GP.Algorithms-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.GP.Algorithms\3.2\HeuristicLab.GP.Algorithms-3.2.csproj">
       <Project>{3127719F-110E-4558-8845-98559DBB422D}</Project>
       <Name>HeuristicLab.GP.Algorithms-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.Interfaces\3.3\HeuristicLab.GP.Interfaces-3.3.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.GP.Interfaces\3.3\HeuristicLab.GP.Interfaces-3.3.csproj">
       <Project>{924B6BEA-9A99-40FE-9334-5C01E8D540EC}</Project>
       <Name>HeuristicLab.GP.Interfaces-3.3</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.Operators\3.3\HeuristicLab.GP.Operators-3.3.csproj">
-      <Project>{45D11FBD-A71B-48D3-8A94-8EB0DFE8E06A}</Project>
-      <Name>HeuristicLab.GP.Operators-3.3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.StructureIdentification.Classification\3.3\HeuristicLab.GP.StructureIdentification.Classification-3.3.csproj">
-      <Project>{7C20D100-8BEB-433A-9499-F075E2CB9297}</Project>
-      <Name>HeuristicLab.GP.StructureIdentification.Classification-3.3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.StructureIdentification.ConditionalEvaluation\3.3\HeuristicLab.GP.StructureIdentification.ConditionalEvaluation-3.3.csproj">
-      <Project>{ABAE70E0-14E3-4588-B6BB-15DF022985C3}</Project>
-      <Name>HeuristicLab.GP.StructureIdentification.ConditionalEvaluation-3.3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.StructureIdentification.Networks\3.2\HeuristicLab.GP.StructureIdentification.Networks-3.2.csproj">
-      <Project>{5DBC2F13-EC32-4DCA-9D5F-E60B5EA8459A}</Project>
-      <Name>HeuristicLab.GP.StructureIdentification.Networks-3.2</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.StructureIdentification.TimeSeries\3.3\HeuristicLab.GP.StructureIdentification.TimeSeries-3.3.csproj">
-      <Project>{6084CFB5-733F-449D-9F92-2E40D13F0514}</Project>
-      <Name>HeuristicLab.GP.StructureIdentification.TimeSeries-3.3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP.StructureIdentification\3.3\HeuristicLab.GP.StructureIdentification-3.3.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.GP.StructureIdentification\3.3\HeuristicLab.GP.StructureIdentification-3.3.csproj">
       <Project>{74223A32-C726-4978-BE78-37113A18373C}</Project>
       <Name>HeuristicLab.GP.StructureIdentification-3.3</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.GP\3.3\HeuristicLab.GP-3.3.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.GP\3.3\HeuristicLab.GP-3.3.csproj">
       <Project>{1F1CF3ED-374C-4288-995B-93F6B872F571}</Project>
       <Name>HeuristicLab.GP-3.3</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Modeling\3.2\HeuristicLab.Modeling-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Modeling\3.2\HeuristicLab.Modeling-3.2.csproj">
       <Project>{80F7FADA-549D-4151-8856-79B620A50DBA}</Project>
       <Name>HeuristicLab.Modeling-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Operators\3.2\HeuristicLab.Operators-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Operators\3.2\HeuristicLab.Operators-3.2.csproj">
       <Project>{A9983BA2-B3B2-475E-8E2C-62050B71D1C5}</Project>
       <Name>HeuristicLab.Operators-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Random\3.2\HeuristicLab.Random-3.2.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Random\3.2\HeuristicLab.Random-3.2.csproj">
       <Project>{47019A74-F7F7-482E-83AA-D3F4F777E879}</Project>
       <Name>HeuristicLab.Random-3.2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Shadow Include="Test References\HeuristicLab.GP.StructureIdentification.Networks-3.2.accessor" />
+    <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -152,4 +166,12 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
+set ProjectDir=$(ProjectDir)
+set SolutionDir=$(SolutionDir)
+set Outdir=$(Outdir)
+
+REM call PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
